# figure_counter

./: CMakeLists.txt  README.md
include/: figure_counter.h
src/: figure_counter.cpp  main.cpp
test/: small_test.txt  test_generator.cpp
